Added paragraph class

--- a/info.html
+++ b/info.html
@@ -19,10 +19,11 @@
       </tr>
       <tr>
         <td> Marble Solitaire <br> <em> Object Oriented Design </em> </td>
-        <td> <p> A fun marble solitaire game with three different board shapes to chose from. 
+        <td class= "paragraph"> 
+             <p> A fun marble solitaire game with three different board shapes to chose from. 
             <br> The shapes are English, European, and Triangle. If you would like to play a 
-            <br> game, simply download the code and create a configuration. The format should 
-            <br> be (board shapre, , ,). 
+            <br> game, simply download the code and create a configuration. The format  
+            <br> should be (board shapre, , ,). 
             <br> This was made with the view, model, and controller set up. The view only 
             <br> deals with what the view sees (ie the user interface), while the controller 
             <br> deals with processing user input, and the model handles the game logic and 
@@ -34,7 +35,8 @@
       </tr> 
       <tr> 
         <td> Image Processor <br> <em> Object Oriented Design </em> </td>
-        <td> <p> This is a image processor program that allows you load, edit, and save 
+        <td class= "paragraph"> 
+             <p> This is a image processor program that allows you load, edit, and save 
             <br> images (supports: jpg, png, bmp, ppm3). There are three different ways to 
             <br> use the program: 1. through the shell via text commands
             <br class= "spacing1"> 2. through the terminal/scripts
@@ -51,21 +53,23 @@
       </tr> 
       <tr>
         <td> China's Economy <br> <em> Macroeconomics </em> </td>
-        <td> <p> This project focus was to research another country's macro economy, convert 
+        <td class= "paragraph"> 
+             <p> This project focus was to research another country's macro economy, convert 
             <br> data into graphs, and analize those graphs to determine the strenghts and 
             <br> weaknesses of their ecnomy. This project was done in stages during the 
             <br> entire semester and at the end we needed to present our findinds to the 
             <br> class. Due to the fact I took the course during COVID, the presentation is 
             <br> a prerecorded video. My role in this project was the 'leader' as I   
-            <br> consistenly organized team meetings, created the graphs, made the powerpoint, 
-            <br> and edited the video.
+            <br> consistenly organized team meetings, created the graphs, made the 
+            <br> powerpoint, and edited the video.
           </p> 
         </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link3" /> </td>
       </tr>
       <tr>
         <td> Chain Expansion <br> <em> International Business </em> </td>
-        <td> <p> A fun marble solitaire game with three different board shapes to chose from.
+        <td class= "paragraph"> 
+             <p> A fun marble solitaire game with three different board shapes to chose from.
             <br> 
           </p> 
         </td>
@@ -73,7 +77,7 @@
       </tr> 
       <tr>
         <td> Country Study  <br> <em> International Business </em> </td> 
-        <td> </td>
+        <td class= "paragraph"> </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link5" /> </td>
       </tr> 
     </table> 
