--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
                 <a href="index.html" id="home">Home</a>
                 <a href="resume.html" id="resume">Resumes</a>
                 <a href="references.html" id="references">References</a>
-                <a href="https://www.instagram.com/meixia_sindelar/" id="instagram" title="follow me @Meixia_Sindelar"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/meixia-sindelar/" id="linkedin" title="check out my LinkedIn profile"><i class="fa fa-linkedin-square"></i></a>
-                <a href="https://github.com/Meixia-S" id="github" title="check out my GitHub profile"><i class="fa fa-github"></i></a>
-                <a href="mailto:meixia2001@gmail.com" id="email" title="click to send me an email"><i class="fa fa-envelope"></i></a>
-                <a href="tel:*6304600067" id="number" title="click to contact me"><i class="fa fa-phone"></i></a>
+                <a href="https://www.instagram.com/meixia_sindelar/" target="_blank" rel="noopener noreferrer" id="instagram" title="follow me @Meixia_Sindelar">
+                 <i class="fa fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/meixia-sindelar/" target="_blank" rel="noopener noreferrer" id="linkedin" title="check out my LinkedIn profile">
+                 <i class="fa fa-linkedin-square"></i></a>
+                <a href="https://github.com/Meixia-S" target="_blank" rel="noopener noreferrer" id="github" title="check out my GitHub profile">
+                 <i class="fa fa-github"></i></a>
+                <a href="mailto:meixia2001@gmail.com" target="_blank" rel="noopener noreferrer" id="email" title="click to send me an email">
+                 <i class="fa fa-envelope"></i></a>
+                <a href="tel:*6304600067" target="_blank" rel="noopener noreferrer" id="number" title="click to contact me">
+                 <i class="fa fa-phone"></i></a>
             </div>  
         </div>
         <img src="images/White-Mt.jpg" alt="white snowy mt" />
