--- a/info.html
+++ b/info.html
@@ -59,9 +59,9 @@
             <br> weaknesses of their ecnomy. This project was done in stages during the 
             <br> entire semester and at the end we needed to present our findinds to the 
             <br> class. Due to the fact I took the course during COVID, the presentation is 
-            <br> a prerecorded video. My role in this project was the 'leader' as I   
-            <br> consistenly organized team meetings, created the graphs, made the 
-            <br> powerpoint, and edited the video.
+            <br> a prerecorded video. My role in this project was the 'leader' as I consistently 
+            <br> organized team meetings, created the graphs, made the powerpoint, and edited 
+            <br> the video.
           </p> 
         </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link3" /> </td>
@@ -70,7 +70,9 @@
         <td> Chain Expansion <br> <em> International Business </em> </td>
         <td class= "paragraph"> 
              <p> A fun marble solitaire game with three different board shapes to chose from.
-            <br> 
+            <br> The goal of this project is to determine weather or not a given American 
+            <br> chain creating a international branch in a foreign country would be an 
+            <br> lucrative endeavor. 
           </p> 
         </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link4" /> </td>
