--- a/info.html
+++ b/info.html
@@ -39,8 +39,9 @@
              <p> This is a image processor program that allows you load, edit, and save 
             <br> images (supports: jpg, png, bmp, ppm3). There are three different ways to 
             <br> use the program: 1. through the shell via text commands
-            <br class= "spacing1"> 2. through the terminal/scripts
-            <br class= "spacing2"> 3. the GUI (recommended)
+            <br> <p class= "indent">
+                                  2. through the terminal/scripts
+            <br>                  3. the GUI (recommended) </p>
             <br> For more information about the inner workings of the program please read
             <br> the README provided. The file will give a more detailed explanation about 
             <br> why I designed the program in the format that I did and how to use it. 
