--- a/references.html
+++ b/references.html
@@ -31,7 +31,7 @@
       <p> Please only contact if you are an interested employer. Please give notice if you wish to call any of my references. <br> 
           Thank you for your understanding and cooperation. <br>
           <em> If you would like to veiw this information in a different format, please click 
-            <a href="images/pdf/Reference_List.pdf">here</a>. </em> 
+            <a href="images/pdf/Reference_List.pdf" target="_blank" rel="noopener noreferrer">here</a>. </em> 
       </p> 
     </div>
     
