Added Panera description

--- a/info.html
+++ b/info.html
@@ -38,10 +38,11 @@
         <td class= "paragraph"> 
              <p> This is a image processor program that allows you load, edit, and save 
             <br> images (supports: jpg, png, bmp, ppm3). There are three different ways to 
-            <br> use the program: 1. through the shell via text commands
+            <br> use the program: 
             <br> <p class= "indent">
+                                  1. through the shell via text commands
                                   2. through the terminal/scripts
-            <br>                  3. the GUI (recommended) </p>
+                                  3. the GUI (recommended) </p>
             <br> For more information about the inner workings of the program please read
             <br> the README provided. The file will give a more detailed explanation about 
             <br> why I designed the program in the format that I did and how to use it. 
@@ -73,7 +74,16 @@
              <p> A fun marble solitaire game with three different board shapes to chose from.
             <br> The goal of this project is to determine weather or not a given American 
             <br> chain creating a international branch in a foreign country would be an 
-            <br> lucrative endeavor. 
+            <br> lucrative endeavor. We had to research the different factors that would
+            <br> play a role in the success of this project. Some examples are the current
+            <br> trends regarding eating habits, the country's resources, infrastructure, 
+            <br> and the cost of building a new location as well as upkeep. The chain my
+            <br> group chose was Panera and the forgien country is Brazil. By the end of the
+            <br> researching phase we concluded that it would be a financally stable move
+            <br> since the demographic was going towards healthier eating and the rescources 
+            <br> needed are present. The role I played in this project is similar to the 
+            <br> previous one with the only difference was having one other teammate who
+            <br> would help me with research and communicating with other members. 
           </p> 
         </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link4" /> </td>
