--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
  <!-- Image here later --> 
    
-  <div class= "paragraph1">
+  <div class= "paragraph">
     <h3> About Me </h3>
     <p> 
      I am 21 year old student living in Boston. I orginally am from Illinois in 
@@ -50,7 +50,7 @@
     </p>
   </div>
  
-  <div class= "paragraph2">
+  <div class= "paragraph">
     <h3> Life Synompis</h3>
     <p>
      I was born in Hunan China and adopted at the age of three and a half. 
@@ -100,7 +100,7 @@
     </p>
    </div>
 
-   <div class= "paragraph3">
+   <div class= "paragraph">
     <h3> Career Aspirations </h3>
     <p> 
      There is still so many aspects of the world I have no idea about have little
@@ -120,7 +120,7 @@
     </p>
    </div>
   
-   <div class= "paragraph4">
+   <div class= "paragraph">
     <h3> Passions </h3>
     <p> 
      As I have entered the young adult stage of my life there where two distinct 
