--- a/info.html
+++ b/info.html
@@ -41,8 +41,8 @@
             <br> use the program: 
             <br> <p class= "indent">
                                   1. through the shell via text commands
-                                  2. through the terminal/scripts
-                                  3. the GUI (recommended) </p>
+            <br>                  2. through the terminal/scripts
+            <br>                  3. the GUI (recommended) </p>
             <br> For more information about the inner workings of the program please read
             <br> the README provided. The file will give a more detailed explanation about 
             <br> why I designed the program in the format that I did and how to use it. 
