--- a/info.html
+++ b/info.html
@@ -12,10 +12,10 @@
     <h2> Further Breakdown Of Projects  <button class= "btn" onclick= "window.location.href = 'resume.html';"> <em> Go Back </em> </button> </h2>
    
     <table class= "table" align= "center">
-      <tr class= "header">
-        <th> Name </th>
-        <th> Description </th>
-        <th> Link to Project </th> 
+      <tr>
+        <th class= "header"> Name </th>
+        <th class= "header"> Description </th>
+        <th class= "header"> Link to Project </th> 
       </tr>
       <tr>
         <td> Marble Solitaire <br> <em> Object Oriented Design </em> </td>
