--- a/info.html
+++ b/info.html
@@ -63,7 +63,8 @@
             <br> class. Due to the fact I took the course during COVID, the presentation is 
             <br> a prerecorded video. My role in this project was the 'leader' as I consistently 
             <br> organized team meetings, created the graphs, made the powerpoint, and edited 
-            <br> the video.
+            <br> the video. This experince gave me some practice in dealing with a language 
+            <br> barrier and working with people in drastically different time zones. 
           </p> 
         </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link3" /> </td>
@@ -71,8 +72,7 @@
       <tr>
         <td> Chain Expansion <br> <em> International Business </em> </td>
         <td class= "paragraph"> 
-             <p> A fun marble solitaire game with three different board shapes to chose from.
-            <br> The goal of this project is to determine weather or not a given American 
+             <p> The goal of this project is to determine weather or not a given American 
             <br> chain creating a international branch in a foreign country would be an 
             <br> lucrative endeavor. We had to research the different factors that would
             <br> play a role in the success of this project. Some examples are the current
@@ -90,7 +90,11 @@
       </tr> 
       <tr>
         <td> Country Study  <br> <em> International Business </em> </td> 
-        <td class= "paragraph"> </td>
+        <td class= "paragraph"> 
+             <p> A fun marble solitaire game with three different board shapes to chose from.
+            <br> The purpose of this project 
+          </p>
+        </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link5" /> </td>
       </tr> 
     </table> 
