--- a/info.html
+++ b/info.html
@@ -13,9 +13,9 @@
    
     <table class= "table" align= "center">
       <tr>
-        <th class= "header"> Name </th>
-        <th class= "header"> Description </th>
-        <th class= "header"> Link to Project </th> 
+        <th> <h3> Name </h3> </th>
+        <th> <h3> Description </h3> </th>
+        <th> <h3> Link to Project </h3> </th> 
       </tr>
       <tr>
         <td> Marble Solitaire <br> <em> Object Oriented Design </em> </td>
