--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
  <!-- Image here later --> 
    
-  <div class= "paragraph1">
+  <div class= "paragraph">
     <h3> About Me </h3>
     <p> 
      I am 21 year old student living in Boston. I orginally am from Illinois in 
