Fixing img link issue

--- a/info.html
+++ b/info.html
@@ -31,7 +31,8 @@
             <br> ... 
           </p> 
         </td>
-        <td align= "center"> <img src= "images/Link.png" alt= "Link1" onclick= "https://github.com/Meixia-S/Marble-Solitaire-Game" /> </td>
+        <td align= "center"> <a href= "https://github.com/Meixia-S/Marble-Solitaire-Game" target= "_blank"> <img src= "images/Link.png" alt= "Link1" /></a>
+        </td>
       </tr> 
       <tr> 
         <td> Image Processor <br> <em> Object Oriented Design </em> </td>
@@ -51,7 +52,8 @@
             <br> where to make sure that all the features where working as intended. 
           </p> 
         </td>
-        <td align= "center"> <img src= "images/Link.png" alt= "Link2" onclick= "https://github.com/Meixia-S/Image-Processor" /> </td>
+        <td align= "center"> <a href= "https://github.com/Meixia-S/Image-Processor" target= "_blank"> <img src= "images/Link.png" alt= "Link2" /></a> 
+       </td>
       </tr> 
       <tr>
         <td> China's Economy <br> <em> Macroeconomics </em> </td>
@@ -67,7 +69,8 @@
             <br> barrier and working with people in drastically different time zones. 
           </p> 
         </td>
-        <td align= "center"> <img src= "images/Link.png" alt= "Link3" /> </td>
+        <td align= "center"> <a href= "here" target= "_blank"> <img src= "images/Link.png" alt= "Link3" /></a>  
+       </td>
       </tr>
       <tr>
         <td> Chain Expansion <br> <em> International Business </em> </td>
@@ -86,7 +89,8 @@
             <br> would help me with research and communicating with other members. 
           </p> 
         </td>
-        <td align= "center"> <img src= "images/Link.png" alt= "Link4" /> </td>
+        <td align= "center"> <a href= "here" target= "_blank"> <img src= "images/Link.png" alt= "Link4" /></a> 
+       </td>
       </tr> 
       <tr>
         <td> Country Study  <br> <em> International Business </em> </td> 
@@ -95,7 +99,8 @@
             <br> The purpose of this project 
           </p>
         </td>
-        <td align= "center"> <img src= "images/Link.png" alt= "Link5" /> </td>
+        <td align= "center"> <a href= "here" target= "_blank"> <img src= "images/Link.png" alt= "Link5" /></a>  
+       </td>
       </tr> 
     </table> 
     </div> 
