--- a/info.html
+++ b/info.html
@@ -26,9 +26,11 @@
             <br> should be (board shapre, , ,). 
             <br> This was made with the view, model, and controller set up. The view only 
             <br> deals with what the view sees (ie the user interface), while the controller 
-            <br> deals with processing user input, and the model handles the game logic and 
+            <br> houses and processes user input, and the model handles the game logic and 
             <br> functions. This keeps the code very easy to read and to edit in the future. 
-            <br> ... 
+            <br> If you are an employer and would like futher detail feel free to contact me
+            <br> since this program was not as explicit with the game design and directions. 
+            <br> *This was an individual project  
           </p> 
         </td>
         <td align= "center"> <a href= "https://github.com/Meixia-S/Marble-Solitaire-Game" target= "_blank"> <img src= "images/Link.png" alt= "Link1" /></a>
@@ -50,23 +52,26 @@
             <br> Unlike the previous project mentioned above, this assignment was more open
             <br> ended as students had more freedom over the design. The only requirements 
             <br> where to make sure that all the features where working as intended. 
+            <br> *This was partially a group effort project
+            <br> 
           </p> 
         </td>
         <td align= "center"> <a href= "https://github.com/Meixia-S/Image-Processor" target= "_blank"> <img src= "images/Link.png" alt= "Link2" /></a> 
        </td>
       </tr> 
       <tr>
-        <td> China's Economy <br> <em> Macroeconomics </em> </td>
+        <td> Country's Economy <br> <em> Macroeconomics </em> </td>
         <td class= "paragraph"> 
-             <p> This project focus was to research another country's macro economy, convert 
+             <p> This project focus was to research another country's macro-economy, convert 
             <br> data into graphs, and analize those graphs to determine the strenghts and 
             <br> weaknesses of their ecnomy. This project was done in stages during the 
-            <br> entire semester and at the end we needed to present our findinds to the 
+            <br> entire semester and at the end we needed to present our findings to the 
             <br> class. Due to the fact I took the course during COVID, the presentation is 
-            <br> a prerecorded video. My role in this project was the 'leader' as I consistently 
-            <br> organized team meetings, created the graphs, made the powerpoint, and edited 
-            <br> the video. This experince gave me some practice in dealing with a language 
-            <br> barrier and working with people in drastically different time zones. 
+            <br> a prerecorded video. For my group we chose to reseach China. My role in 
+            <br> this project was the 'leader' as I consistently organized team meetings,
+            <br> created the graphs, made the powerpoint, and edited the video. This
+            <br> experince gave me some practice in dealing with a language barrier and 
+            <br> working with people in drastically different time zones. 
           </p> 
         </td>
         <td align= "center"> <a href= "here" target= "_blank"> <img src= "images/Link.png" alt= "Link3" /></a>  
@@ -96,7 +101,8 @@
         <td> Country Study  <br> <em> International Business </em> </td> 
         <td class= "paragraph"> 
              <p> A fun marble solitaire game with three different board shapes to chose from.
-            <br> The purpose of this project 
+            <br> The purpose of this project is to have a wholistic understanding a given 
+            <br> country. ...
           </p>
         </td>
         <td align= "center"> <a href= "here" target= "_blank"> <img src= "images/Link.png" alt= "Link5" /></a>  
