Completing project 1-2 text

--- a/info.html
+++ b/info.html
@@ -22,7 +22,7 @@
         <td class= "paragraph"> 
              <p> A fun marble solitaire game with three different board shapes to chose from. 
             <br> The shapes are English, European, and Triangle. If you would like to play a 
-            <br> game, simply download the code and create a configuration. The format  
+            <br> game, simply clone the repository and create a configuration. The format  
             <br> should be (board shapre, , ,). 
             <br> This was made with the view, model, and controller set up. The view only 
             <br> deals with what the view sees (ie the user interface), while the controller 
@@ -51,7 +51,11 @@
             <br> why I designed the program in the format that I did and how to use it. 
             <br> Unlike the previous project mentioned above, this assignment was more open
             <br> ended as students had more freedom over the design. The only requirements 
-            <br> where to make sure that all the features where working as intended. 
+            <br> where to make sure that all the features where working as intended. If 
+            <br> you would like to use the processor you can clone the respoitory. I 
+            <br> highly suggest that you throughly read the README file in the info folder.
+            <br> The program has a restrictive naming convention for saving image when using 
+            <br> the GUI. Let me know if you are having any issues. 
             <br> *This was partially a group effort project
             <br> 
           </p> 
