Adding table padding

--- a/info.html
+++ b/info.html
@@ -11,7 +11,7 @@
       
     <h2> Further Breakdown Of Projects  <button class= "btn" onclick= "window.location.href = 'resume.html';"> <em> Go Back </em> </button> </h2>
    
-    <table class= "table" align= "center">
+    <table class= "table" style= "padding-bottom: 30px" align= "center">
       <tr>
         <th> <h3> Name </h3> </th>
         <th> <h3> Description </h3> </th>
