--- a/info.html
+++ b/info.html
@@ -68,10 +68,10 @@
         <td class= "paragraph"> 
              <p> This project focus was to research another country's macro-economy, convert 
             <br> data into graphs, and analize those graphs to determine the strenghts and 
-            <br> weaknesses of their ecnomy. This project was done in stages during the 
-            <br> entire semester and at the end we needed to present our findings to the 
-            <br> class. Due to the fact I took the course during COVID, the presentation is 
-            <br> a prerecorded video. For my group we chose to reseach China. My role in 
+            <br> weaknesses of their ecnomy. This project was done in stages during the entire
+            <br> semester and at the end we needed to present our findings to the class.  
+            <br> Due to the fact I took the course during COVID, the presentation is a 
+            <br> prerecorded video. For my group we chose to reseach China. My role in 
             <br> this project was the 'leader' as I consistently organized team meetings,
             <br> created the graphs, made the powerpoint, and edited the video. This
             <br> experince gave me some practice in dealing with a language barrier and 
