--- a/info.html
+++ b/info.html
@@ -51,10 +51,10 @@
             <br> why I designed the program in the format that I did and how to use it. 
             <br> Unlike the previous project mentioned above, this assignment was more open
             <br> ended as students had more freedom over the design. The only requirements 
-            <br> where to make sure that all the features where working as intended. If 
-            <br> you would like to use the processor you can clone the respoitory. I 
-            <br> highly suggest that you throughly read the README file in the info folder.
-            <br> The program has a restrictive naming convention for saving image when using 
+            <br> where to make sure that all the features where working as intended. If you
+            <br> would like to use the processor you can clone the respoitory. I highly 
+            <br> suggest that you throughly read the README file in the 'info' folder. The 
+            <br> program has a restrictive naming convention for saving image when using 
             <br> the GUI. Let me know if you are having any issues. 
             <br> *This was partially a group effort project
             <br> 
@@ -69,13 +69,13 @@
              <p> This project focus was to research another country's macro-economy, convert 
             <br> data into graphs, and analize those graphs to determine the strenghts and 
             <br> weaknesses of their ecnomy. This project was done in stages during the entire
-            <br> semester and at the end we needed to present our findings to the class.  
-            <br> Due to the fact I took the course during COVID, the presentation is a 
-            <br> prerecorded video. For my group we chose to reseach China. My role in 
-            <br> this project was the 'leader' as I consistently organized team meetings,
-            <br> created the graphs, made the powerpoint, and edited the video. This
-            <br> experince gave me some practice in dealing with a language barrier and 
-            <br> working with people in drastically different time zones. 
+            <br> semester and at the end we needed to present our findings to the class. Due 
+            <br> to the fact I took the course during COVID, the presentation is a prerecorded
+            <br> video. For my group we chose to reseach China. My role in this project was
+            <br> the 'leader' as I consistently organized team meetings, created the graphs, 
+            <br> made the powerpoint, and edited the video. This experince gave me some
+            <br> practice in dealing with a language barrier and  working with people in
+            <br> drastically different time zones. 
           </p> 
         </td>
         <td align= "center"> <a href= "here" target= "_blank"> <img src= "images/Link.png" alt= "Link3" /></a>  
