--- a/info.html
+++ b/info.html
@@ -114,7 +114,8 @@
       </tr> 
     </table> 
   
-   <p class= "padding"> </p> 
+   <p class= "padding"> If you are contacting me regarding any of these projects please have the subject start with "Project Inquiry". 
+                   <br> Thank you </p> 
    </div> 
   </body>
 </html> 
