Changed number format

--- a/references.html
+++ b/references.html
@@ -54,7 +54,7 @@
         <p> Vice President for Programs </p>  
         <p> DuPage Foundation </p>
         <p class= "contact"> Contact Information: </p>
-        <p> barb@dupagefoundation.org <br> 630.xxx.5280 </p> 
+        <p> barb@dupagefoundation.org <br> (630) xxx - 5280 </p> 
         <p> She was my boss during my summer internship in 2021. <br> More information is on my resume. </p>
       </div> 
     </div>
@@ -66,7 +66,7 @@
         <p> Front of House Manager/Volunteer Coordinator </p>  
         <p> McAninch Arts Center </p>
         <p class= "contact"> Contact Information: </p>
-        <p> nardinir@cod.edu <br> 630.xxx.2100 </p> 
+        <p> nardinir@cod.edu <br> (630) xxx - 2100 </p> 
         <p> He was my boss during my other summer job in 2021. <br> This experince helped me learn more about customer service. </p>
       </div>
     </div>
@@ -78,7 +78,7 @@
         <p> English Teacher </p>  
         <p> Glenbard West High School </p>
         <p class= "contact"> Contact Information: </p>
-        <p> kelly_hass@glenbard.org <br> 630.xxx.8600 </p> 
+        <p> kelly_hass@glenbard.org <br> (630) xxx - 8600 </p> 
         <p> Kelly was my english teacher and helped me gain confidence in my writing abilities.
           <br> She pushed me to take an AP english class which taught me to pursue more lofty goals. </p>
       </div>
