--- a/resume.html
+++ b/resume.html
@@ -38,8 +38,8 @@
         <!-- Setting up the 2x2 table for the resume and their respective titles -->
         <table>
             <tr>
-                <th> <h2 class= "header1"> Computer Science </h2> </th> 
-                <th> <h2 class= "header2"> Business Administration </h2> </th>
+                <th> <p class= "header1"> Computer Science </p> </th> 
+                <th> <p class= "header2"> Business Administration </p> </th>
             </tr>
             <tr>
                 <td> <img class= "resumeImage1" src="images/CS Resume.jpg" /> </td>
