--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
   <div class= "paragraph">
     <h3> About Me </h3>
     <p> 
-     I am 21 year old student living in Boston. I orginally am from Illinois in 
-     the ChicagoLand area. <br> CURRENTLY NOTHING HAS BEEN EDITED/PEER EDITED
+     I am 21 year old, third year student living in Boston. I orginally am from Illinois in 
+     the ChicagoLand area and have lived there most of my life. 
+     
+     <br> CURRENTLY NOTHING HAS BEEN EDITED/PEER EDITED
      <br> - stuff that happened in the last year/ what I want to do in the future
     </p>
   </div>
@@ -147,18 +149,19 @@
      The second passion of mine is less techinally driven interest. Taking 
      ecology and biology classes in high school made me look at the natrual 
      world with a more critical eye. Instead of thinking an animal looked 
-     odd or bazzar, I started to wonder why they looked the way they did and 
-     if it was the environment or its place in the food chain. As I got older 
-     this curisoity turned to why humans are the way we are and our evolutionary 
-     journey and its place in the current time period. As more information closly 
-     gets uncovered and piece of our past has been put together it really presents 
-     an intriguing story of where we came from as a speicies. Learning about this 
-     kind of science has really helped me put things into perspective and feel more 
-     connected with the world. I know these are quite __ statements but I think 
-     someone's passion/hobby should help people feel more present and connected to 
-     their spot in the world and for me, learning about "life's" past does that 
-     for me. On a lighter note if you ever learn more about bugs, you'll find that 
-     they truly are the aliens that roam along side us!
+     odd or bazzar, I started to wonder why they looked the way they did 
+     and if it was the environment or its place in the food chain. As I got 
+     older this curisoity turned to why humans are the way we are and our 
+     evolutionary journey and its place in the current time period. As more 
+     information closly gets uncovered and piece of our past has been put 
+     together it really presents an intriguing story of where we came from as 
+     a speicies. Learning about this kind of science has really helped me put 
+     things into perspective and feel more connected with the world. I know 
+     these are quite __ statements but I think someone's passion/hobby should 
+     help people feel more present and connected to their spot in the world and 
+     for me, learning about "life's" past does that for me. On a lighter note 
+     if you ever learn more about bugs, you'll find that they truly are the 
+     aliens that roam along side us!
     </p>
    </div>
   
