--- a/references.html
+++ b/references.html
@@ -67,7 +67,7 @@
         <p> McAninch Arts Center </p>
         <p class= "contact"> Contact Information: </p>
         <p> <a href="mailto:nardinir@cod.edu" id="email" title="click to send Rob an email">nardinir@cod.edu</a> <br> (630) xxx - 2100 </p> 
-        <p> He was my boss during my other summer job in 2021. <br> This experince helped me learn more about customer service. </p>
+        <p> He was my boss during my other summer job in 2021. <br> This experience helped me learn more about customer service. </p>
       </div>
     </div>
     
@@ -79,8 +79,8 @@
         <p> Glenbard West High School </p>
         <p class= "contact"> Contact Information: </p>
         <p> <a href="mailto:kelly_hass@glenbard.org" id="email" title="click to send Kelly an email">kelly_hass@glenbard.org</a> <br> (630) xxx - 8600 </p> 
-        <p> Kelly was my english teacher and helped me gain confidence in my writing abilities.
-          <br> She pushed me to take an AP english class which taught me to pursue more lofty goals. </p>
+        <p> Kelly was my English teacher and helped me gain confidence in my writing abilities.
+          <br> She pushed me to take an AP English class which taught me to pursue more lofty goals. </p>
       </div>
     </div>
     
