--- a/info.html
+++ b/info.html
@@ -78,11 +78,12 @@
             <br> drastically different time zones. 
           </p> 
         </td>
-        <td align= "center"> <a href= "here" target= "_blank"> <img src= "images/Link.png" alt= "Link3" /></a>  
+        <td align= "center"> <a href= "https://drive.google.com/file/d/19EbRlj_XCEd1ZUNXxqgIzP_407wwqBN8/view?usp=sharing" target= "_blank"> 
+          <img src= "images/Link.png" alt= "Link3" /></a>  
        </td>
       </tr>
       <tr>
-        <td> Chain Expansion <br> <em> International Business </em> </td>
+        <td> Market Entry <br> <em> International Business and Global Social Responsibility </em> </td>
         <td class= "paragraph"> 
              <p> The goal of this project is to determine weather or not a given American 
             <br> chain creating a international branch in a foreign country would be an 
@@ -98,18 +99,19 @@
             <br> would help me with research and communicating with other members. 
           </p> 
         </td>
-        <td align= "center"> <a href= "here" target= "_blank"> <img src= "images/Link.png" alt= "Link4" /></a> 
+        <td align= "center"> <a href= "https://drive.google.com/file/d/1fnnQ6KmjBnkcz2IrwlSEoM4dXoAdi1lJ/view?usp=sharing" target= "_blank"> 
+          <img src= "images/Link.png" alt= "Link4" /></a> 
        </td>
       </tr> 
       <tr>
-        <td> Country Study  <br> <em> International Business </em> </td> 
+        <td> Country Study  <br> <em> International Business and Global Social Responsibility</em> </td> 
         <td class= "paragraph"> 
              <p> A fun marble solitaire game with three different board shapes to chose from.
             <br> The purpose of this project is to have a wholistic understanding a given 
             <br> country. ...
           </p>
         </td>
-        <td align= "center"> <a href= "here" target= "_blank"> <img src= "images/Link.png" alt= "Link5" /></a>  
+        <td align= "center"> <a href= "https://www.youtube.com/watch?v=oo2ZDTQyqRs" target= "_blank"> <img src= "images/Link.png" alt= "Link5" /></a>  
        </td>
       </tr> 
     </table> 
