--- a/info.html
+++ b/info.html
@@ -23,13 +23,16 @@
              <p> A fun marble solitaire game with three different board shapes to chose from. 
             <br> The shapes are English, European, and Triangle. If you would like to play a 
             <br> game, simply clone the repository and create a configuration. The format  
-            <br> should be (board shapre, , ,). 
+            <br> should be ("Board Shape", armThickness) to start off with. There are four
+            <br> different configurations that can be made with the variations of parameters 
+            <br> (board shape, armThickness, row (empty marble row), col (empty marble col)).
             <br> This was made with the view, model, and controller set up. The view only 
-            <br> deals with what the view sees (ie the user interface), while the controller 
-            <br> houses and processes user input, and the model handles the game logic and 
-            <br> functions. This keeps the code very easy to read and to edit in the future. 
-            <br> If you are an employer and would like futher detail feel free to contact me
-            <br> since this program was not as explicit with the game design and directions. 
+            <br> deals with what the view sees (ie the user interface), while the controller
+            <br> houses and processes user input, and the model handles the game logic and
+            <br> functions. This keeps the code very easy to read and to edit in the future.
+            <br> If you are an employer and would like further details feel free to contact  
+            <br> me. This program is unfortunately not as explicit with the game design and
+            <br> directions as other projects. 
             <br> *This was an individual project  
           </p> 
         </td>
@@ -73,9 +76,10 @@
             <br> to the fact I took the course during COVID, the presentation is a prerecorded
             <br> video. For my group we chose to reseach China. My role in this project was
             <br> the 'leader' as I consistently organized team meetings, created the graphs, 
-            <br> made the powerpoint, and edited the video. This experince gave me some
-            <br> practice in dealing with a language barrier and  working with people in
-            <br> drastically different time zones. 
+            <br> made the powerpoint, and edited the video. I covered the "Real GDP per Capita"
+            <br> and macroencomic priority slides. This experince gave me some practice in 
+            <br> dealing with a language barrier and  working with people in drastically
+            <br> different time zones. 
           </p> 
         </td>
         <td align= "center"> <a href= "https://drive.google.com/file/d/19EbRlj_XCEd1ZUNXxqgIzP_407wwqBN8/view?usp=sharing" target= "_blank"> 
@@ -94,9 +98,11 @@
             <br> group chose was Panera and the forgien country is Brazil. By the end of the
             <br> researching phase we concluded that it would be a financally stable move
             <br> since the demographic was going towards healthier eating and the rescources 
-            <br> needed are present. The role I played in this project is similar to the 
-            <br> previous one with the only difference was having one other teammate who
-            <br> would help me with research and communicating with other members. 
+            <br> needed are present. In the presentation I covered the "Brazil's Economy", 
+            <br> "Economic Forces", and "Why Panera Bread Would Do Well In Brazil’s Economy"
+            <br> slides. The role I played in this project is similar to the previous one  
+            <br> with the only difference was having one other teammate who would help me 
+            <br> with research and communicating with other members. 
           </p> 
         </td>
         <td align= "center"> <a href= "https://drive.google.com/file/d/1fnnQ6KmjBnkcz2IrwlSEoM4dXoAdi1lJ/view?usp=sharing" target= "_blank"> 
@@ -106,9 +112,15 @@
       <tr>
         <td> Country Study  <br> <em> International Business and Global Social Responsibility</em> </td> 
         <td class= "paragraph"> 
-             <p> A fun marble solitaire game with three different board shapes to chose from.
-            <br> The purpose of this project is to have a wholistic understanding a given 
-            <br> country. ...
+             <p> The purpose of this project is to discuess a noteworthy event that took  
+            <br> place in or related to the given country. To do this we needed to have a more 
+            <br> wholistic understanding of the country from the history and culture of the 
+            <br> country to its politics and relate this all back to how the event affects the 
+            <br> the international market. At the end each group made a small game that quizzed
+            <br> the audience about the topcis covered. For this presentation I covered the 
+            <br> "Political Leaders, Government, and Corruption" and "Censorship and Security"
+            <br> slides. My role for this presention was simply to research my assigned topics
+            <br> and designing and recording my slides.
           </p>
         </td>
         <td align= "center"> <a href= "https://www.youtube.com/watch?v=oo2ZDTQyqRs" target= "_blank"> <img src= "images/Link.png" alt= "Link5" /></a>  
